--- a/Echo/Views/MenuBarView.xaml
+++ b/Echo/Views/MenuBarView.xaml
@@ -507,17 +507,39 @@
         <!-- 控制菜单 -->
         <MenuItem Header="{x:Static resx:LangResx.Control}">
             <MenuItem Header="{x:Static resx:LangResx.Backward_Time}">
-                <MenuItem Header="{x:Static resx:LangResx.Fixed_Time}" Command="{Binding BackwardByTimeCommand}"/>
-                <MenuItem Header="{x:Static resx:LangResx.Previous_Sentence}" Command="{Binding BackwardBySentenceCommand}"/>
+                <!--todo
+                <MenuItem Header="{x:Static resx:LangResx.Fixed_Time}" Command="{Binding BackwardByTimeCommand}"/>-->
+                <!-- 添加输入框 -->
+                <MenuItem >
+                    <MenuItem.Header>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBox Width="40" Text="{Binding BackwardTime, Mode=TwoWay}" 
+                             VerticalAlignment="Center" HorizontalAlignment="Left"/>
+                            <TextBlock Text="{x:Static resx:LangResx.Seconds}" VerticalAlignment="Center" Margin="5,0,0,0"/>
+                        </StackPanel>
+                    </MenuItem.Header>
+                </MenuItem>
+                <!--todo
+                <MenuItem Header="{x:Static resx:LangResx.Previous_Sentence}" Command="{Binding BackwardBySentenceCommand}"/>-->
             </MenuItem>
             <MenuItem Header="{x:Static resx:LangResx.Forward_Time}">
-                <MenuItem Header="{x:Static resx:LangResx.Fixed_Time}" Command="{Binding ForkwardByTimeCommand}"/>
-                <MenuItem Header="{x:Static resx:LangResx.Medium}" Command="{Binding BackwardBySentenceCommand}"/>
+                <!--todo
+                <MenuItem Header="{x:Static resx:LangResx.Fixed_Time}" Command="{Binding ForwardByTimeCommand}"/>-->
+                <!-- 添加输入框 -->
+                <MenuItem>
+                    <MenuItem.Header>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBox Width="40" Text="{Binding ForwardTime, Mode=TwoWay}" 
+                             VerticalAlignment="Center" HorizontalAlignment="Left"/>
+                            <TextBlock Text="{x:Static resx:LangResx.Seconds}" VerticalAlignment="Center" Margin="5,0,0,0"/>
+                        </StackPanel>
+                    </MenuItem.Header>
+                </MenuItem>
+                <!--todo
+                <MenuItem Header="{x:Static resx:LangResx.Next_Sentence}" Command="{Binding ForwardBySentenceCommand}"/>-->
             </MenuItem>
             <MenuItem Header="{x:Static resx:LangResx.Fullscreen_Lock}" IsCheckable="True"/>
-
         </MenuItem>
-
         <!-- 系统菜单 -->
         <MenuItem Header="{x:Static resx:LangResx.System}">
             <MenuItem Header="{x:Static resx:LangResx.Software_Language}">
@@ -574,6 +596,7 @@
                           Command="{Binding SoftwareLanguageChangeCommand}" 
                           CommandParameter="it-IT" />
             </MenuItem>
+            <!--todo
             <MenuItem Header="{x:Static resx:LangResx.Snapshot_Folder}" Command="{Binding SetScreenShotDirCommand}"/>
             <MenuItem Header="{x:Static resx:LangResx.Shortcuts}">
                 <MenuItem Header="{x:Static resx:LangResx.Backward_Shortcut}" Command="{Binding ShortcutBackwardCommand}"/>
@@ -581,6 +604,7 @@
                 <MenuItem Header="{x:Static resx:LangResx.Volume_Shortcut}" Command="{Binding ShortcutVolumeCommand}" />
                 <MenuItem Header="{x:Static resx:LangResx.Snapshot_Shortcut}" Command="{Binding ShortcutScreenshotCommand}" />
             </MenuItem>
+            -->
         </MenuItem>
 
         <!-- 帮助菜单 -->
